marginbottom fix for forgot pswd

--- a/views/eutrc_app/signin.ejs
+++ b/views/eutrc_app/signin.ejs
@@ -124,7 +124,7 @@
             <text>Email</text>
             <input class="signin-element" type="email" id="email" name="email" placeholder="@exeter.ac.uk">
             <text>Password</text>
-            <input class="signin-element" type="password" id="password" name="password" placeholder="***********">
+            <input class="signin-element" type="password" id="password" name="password" placeholder="***********" style="margin-bottom: 10px;">
             <text style="text-align: center; margin-bottom: 10px; font-size: small;">Forgotten password? Contact admin!</text>
             <input class="submit-btn" type="submit" value="Submit">
           </form> 
