--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -114,7 +114,7 @@
                 <div class="hp-training">
                     <h3>High Performance (HP)</h3>
                     <text>
-                        Date: <%= hpTraining[date_day] %>/<%= hpTraining[date_month] %>//<%= hpTraining[date_year] %>
+                        Date: <%= hpTraining[0] %>/<%= hpTraining[date_month] %>//<%= hpTraining[date_year] %>
                         Time: <%= hpTraining[time] %>
                         Location: <%= hpTraining[location] %> 
                         Drills: <%= hpTraining[drills] %>
