--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -120,7 +120,7 @@
                             Location: <%= hpTraining['location'] %> 
                             Drills: <%= hpTraining['drills'] %>
                         </text>
-                    <% else { %> 
+                    <% } else { %> 
                         <p>There is no High Performance training within the next week.</p>
                     <% } %> 
                 </div>
@@ -134,7 +134,7 @@
                             Location: <%= dvTraining['location'] %> 
                             Drills: <%= dvTraining['drills'] %>
                         </text>
-                    <% else { %> 
+                    <% } else { %> 
                         <p>There is no Development training within the next week.</p>
                     <% } %> 
                 </div>
@@ -148,7 +148,7 @@
                             Location: <%= cbTraining['location'] %> 
                             Drills: <%= cbTraining['drills'] %>
                         </text>
-                    <% else { %> 
+                    <% } else { %> 
                         <p>There is no Club training within the next week.</p>
                     <% } %> 
                 </div>
