--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -114,42 +114,42 @@
                 <div class="hp-training">
                     <h3>High Performance (HP)</h3>
                     <% if (hpTraining['date_day'] != 'none') { %>
-                        <text>
+                        <text class="training-info">
                             Date: <%= hpTraining['date_day'] %>/<%= hpTraining['date_month'] %>//<%= hpTraining['date_year'] %>
                             Time: <%= hpTraining['time'] %>
                             Location: <%= hpTraining['location'] %> 
                             Drills: <%= hpTraining['drills'] %>
                         </text>
                     <% } else { %> 
-                        <p>There is no High Performance training within the next week.</p>
+                        <p class="training-info">There is no High Performance training within the next week.</p>
                     <% } %> 
                 </div>
 
                 <div class="dv-training">
                     <h3>Development (DV)</h3>
                     <% if (dvTraining['date_day'] != 'none') { %>
-                        <text>
+                        <text class="training-info">
                             Date: <%= dvTraining['date_day'] %>/<%= dvTraining['date_month'] %>//<%= dvTraining['date_year'] %>
                             Time: <%= dvTraining['time'] %>
                             Location: <%= dvTraining['location'] %> 
                             Drills: <%= dvTraining['drills'] %>
                         </text>
                     <% } else { %> 
-                        <p>There is no Development training within the next week.</p>
+                        <p class="training-info">There is no Development training within the next week.</p>
                     <% } %> 
                 </div>
 
                 <div class="cb-training">
                     <h3>Club (CB)</h3>
                     <% if (cbTraining['date_day'] != 'none') { %>
-                        <text>
+                        <text class="training-info">
                             Date: <%= cbTraining['date_day'] %>/<%= cbTraining['date_month'] %>//<%= cbTraining['date_year'] %>
                             Time: <%= cbTraining['time'] %>
                             Location: <%= cbTraining['location'] %> 
                             Drills: <%= cbTraining['drills'] %>
                         </text>
                     <% } else { %> 
-                        <p>There is no Club training within the next week.</p>
+                        <p class="training-info">There is no Club training within the next week.</p>
                     <% } %> 
                 </div>
             </div>
