--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -118,10 +118,10 @@
                     <h3>High Performance (HP)</h3>
                     <% if (hpTraining['date_day'] != 'none') { %>
                         <div class="training-info">
-                            Date: <%= hpTraining['date_day'] %>/<%= hpTraining['date_month'] %>//<%= hpTraining['date_year'] %>
-                            Time: <%= hpTraining['time'] %>
-                            Location: <%= hpTraining['location'] %> 
-                            Drills: <%= hpTraining['drills'] %>
+                            <text>Date: <%= hpTraining['date_day'] %>/<%= hpTraining['date_month'] %>//<%= hpTraining['date_year'] %></text>
+                            <text>Time: <%= hpTraining['time'] %></text>
+                            <text>Location: <%= hpTraining['location'] %></text>
+                            <text>Drills: <%= hpTraining['drills'] %></text>
                         </div>
                     <% } else { %> 
                         <p style="margin-left: 10px;">There is no High Performance training within the next week.</p>
