--- a/views/eutrc_app/verification.ejs
+++ b/views/eutrc_app/verification.ejs
@@ -8,7 +8,7 @@
 
     <style>
         body {
-            background-color: black;
+            background-color: rgb(25,25,25);
             padding: 20px;
         }
 
