--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -36,6 +36,7 @@
             display: flex;
             flex-direction: column;
             padding: 15px;
+            padding-left: 40px;
             color: rgb(252, 237, 218);
         }
 
