--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -21,6 +21,12 @@
             flex-direction: column;
             row-gap: 30px;
             padding-top: 40px;
+            border-left: 0px;
+            border-top: 0px;
+            border-right: 1px;
+            border-bottom: 0px;
+            border-style: solid;
+            border-color: black;
         }
 
         .icon-btns {
