--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -17,6 +17,9 @@
 
         .left-nav-section {
             width: 80px;
+            padding: 10px;
+            /* padding-left: 10px; */
+            padding-right: 20px;
             display: flex;
             flex-direction: column;
             row-gap: 30px;
