--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -41,8 +41,12 @@
         }
 
         .right-content-section {
+            
+        }
+
+        .right-content {
             flex: 8;
-            display: flex;
+            display: none;
             flex-direction: column;
             padding: 15px;
             padding-left: 40px;
@@ -101,73 +105,104 @@
                 >
             </a>
 
-            <a 
-                class="icon-btns"
-                href="./home.ejs"
+        
+            <img 
+                class="icon-imgs"
+                onclick="showHome()"
+                src="/website images/eutrc app/icons/home_icon.png" 
+                alt="Home Icon"
             >
-                <img 
-                    class="icon-imgs"
-                    src="/website images/eutrc app/icons/home_icon.png" 
-                    alt="Home Icon"
-                >
-            </a>
+
+            <button class="icon-imgs" onclick="showEvents()">
+                CLICK MEEEE
+            </button>
             
         </div>
         <!-- This right content section will be what changes on button click -->
         <div class="right-content-section">
-            <h1 style="text-align:center ;">
-                EUTRC APP Home Page
-            </h1>
 
-            <text class="welcome-msg">Welcome back <%= name %></text>
-
-            <div class="trainings-section">
-                <h2>Upcoming EUTRC Trainings</h2>
-
-                <div class="hp-training">
-                    <h3>High Performance (HP)</h3>
-                    <% if (hpTraining['date_day'] != 'none') { %>
-                        <div class="training-info">
-                            <text>Date: <%= hpTraining['date_day'] %>/<%= hpTraining['date_month'] %>//<%= hpTraining['date_year'] %></text>
-                            <text>Time: <%= hpTraining['time'] %></text>
-                            <text>Location: <%= hpTraining['location'] %></text>
-                            <text>Drills: <%= hpTraining['drills'] %></text>
-                        </div>
-                    <% } else { %> 
-                        <p style="margin-left: 10px;">There is no High Performance training within the next week.</p>
-                    <% } %> 
-                </div>
-
-                <div class="dv-training">
-                    <h3>Development (DV)</h3>
-                    <% if (dvTraining['date_day'] != 'none') { %>
-                        <div class="training-info">
-                            <text>Date: <%= dvTraining['date_day'] %>/<%= dvTraining['date_month'] %>//<%= dvTraining['date_year'] %></text>
-                            <text>Time: <%= dvTraining['time'] %></text>
-                            <text>Location: <%= dvTraining['location'] %></text>
-                            <text>Drills: <%= dvTraining['drills'] %></text>
-                        </div>
-                    <% } else { %> 
-                        <p style="margin-left: 10px;">There is no Development training within the next week.</p>
-                    <% } %> 
-                </div>
-
-                <div class="cb-training">
-                    <h3>Club (CB)</h3>
-                    <% if (cbTraining['date_day'] != 'none') { %>
-                        <div class="training-info">
-                            <text>Date: <%= cbTraining['date_day'] %>/<%= cbTraining['date_month'] %>//<%= cbTraining['date_year'] %></text>
-                            <text>Time: <%= cbTraining['time'] %></text>
-                            <text>Location: <%= cbTraining['location'] %> </text>
-                            <text>Drills: <%= cbTraining['drills'] %></text>
-                        </div>
-                    <% } else { %> 
-                        <p style="margin-left: 10px;">There is no Club training within the next week.</p>
-                    <% } %> 
+            <!-- This div holds all the page information for the HOME page -->
+            <div class="right-content" name="homePage" id="homePage"> 
+                <h1 style="text-align:center ;">
+                    EUTRC APP Home Page
+                </h1>
+    
+                <text class="welcome-msg">Welcome back <%=userInfo['name']%></text>
+    
+                <div class="trainings-section">
+                    <h2>Upcoming EUTRC Trainings</h2>
+    
+                    <div class="hp-training">
+                        <h3>High Performance (HP)</h3>
+                        <% if (hpTraining['date_day'] != 'none') { %>
+                            <div class="training-info">
+                                <text>Date: <%= hpTraining['date_day'] %>/<%= hpTraining['date_month'] %>//<%= hpTraining['date_year'] %></text>
+                                <text>Time: <%= hpTraining['time'] %></text>
+                                <text>Location: <%= hpTraining['location'] %></text>
+                                <text>Drills: <%= hpTraining['drills'] %></text>
+                            </div>
+                        <% } else { %> 
+                            <p style="margin-left: 10px;">There is no High Performance training within the next week.</p>
+                        <% } %> 
+                    </div>
+    
+                    <div class="dv-training">
+                        <h3>Development (DV)</h3>
+                        <% if (dvTraining['date_day'] != 'none') { %>
+                            <div class="training-info">
+                                <text>Date: <%= dvTraining['date_day'] %>/<%= dvTraining['date_month'] %>//<%= dvTraining['date_year'] %></text>
+                                <text>Time: <%= dvTraining['time'] %></text>
+                                <text>Location: <%= dvTraining['location'] %></text>
+                                <text>Drills: <%= dvTraining['drills'] %></text>
+                            </div>
+                        <% } else { %> 
+                            <p style="margin-left: 10px;">There is no Development training within the next week.</p>
+                        <% } %> 
+                    </div>
+    
+                    <div class="cb-training">
+                        <h3>Club (CB)</h3>
+                        <% if (cbTraining['date_day'] != 'none') { %>
+                            <div class="training-info">
+                                <text>Date: <%= cbTraining['date_day'] %>/<%= cbTraining['date_month'] %>//<%= cbTraining['date_year'] %></text>
+                                <text>Time: <%= cbTraining['time'] %></text>
+                                <text>Location: <%= cbTraining['location'] %> </text>
+                                <text>Drills: <%= cbTraining['drills'] %></text>
+                            </div>
+                        <% } else { %> 
+                            <p style="margin-left: 10px;">There is no Club training within the next week.</p>
+                        <% } %> 
+                    </div>
                 </div>
             </div>
+
+            <!-- This div holds all the page information for the EVENTS page -->
+            <div class="right-content" name="eventsPage" id="eventsPage"> 
+                EVENTS RIGHT HERE!!
+                <p>paragraph here!</p>
+            </div>
+            
         </div>
     </div>
+
+    <script>
+        function showHome(){
+            let homePageObj = document.getElementById('homePage')
+            homePageObj.style.display = 'flex'
+
+            let eventsPageObj = document.getElementById('eventsPage')
+            homePageObj.style.display = 'none'
+        }
+
+        function showEvents(){
+            let homePageObj = document.getElementById('homePage')
+            homePageObj.style.display = 'none'
+
+            let eventsPageObj = document.getElementById('eventsPage')
+            homePageObj.style.display = 'flex'
+        }
+
+    </script>
 
 </body>
 </html>
