--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -122,7 +122,7 @@
         <div class="right-content-section">
 
             <!-- This div holds all the page information for the HOME page -->
-            <div class="right-content" name="homePage" id="homePage"> 
+            <div class="right-content" name="homePage" id="homePage" style="display:flex;"> 
                 <h1 style="text-align:center ;">
                     EUTRC APP Home Page
                 </h1>
@@ -191,7 +191,7 @@
             homePageObj.style.display = 'flex'
 
             let eventsPageObj = document.getElementById('eventsPage')
-            homePageObj.style.display = 'none'
+            eventsPageObj.style.display = 'none'
         }
 
         function showEvents(){
@@ -199,7 +199,7 @@
             homePageObj.style.display = 'none'
 
             let eventsPageObj = document.getElementById('eventsPage')
-            homePageObj.style.display = 'flex'
+            eventsPageObj.style.display = 'flex'
         }
 
     </script>
