css change for content section

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -41,15 +41,17 @@
         }
 
         .right-content-section {
-            
+            flex: 8;
+            display: flex;
+            flex-direction: column;
+            padding: 15px;
+            padding-left: 40px;
         }
 
         .right-content {
             flex: 8;
             display: none;
             flex-direction: column;
-            padding: 15px;
-            padding-left: 40px;
             color: rgb(252, 237, 218);
         }
 
