--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -38,6 +38,7 @@
 
         .icon-imgs {
             width: 100%;
+            cursor: pointer;
         }
 
         .right-content-section {
@@ -76,6 +77,7 @@
             border-style: solid;
             border-color: beige;
             padding: 5px;
+            margin-bottom: 10px;
         }
 
         .hp-training {
@@ -88,6 +90,7 @@
             display: flex;
             flex-direction: column;
             row-gap: 10px;
+            margin-bottom: 30px;
         }
 
     </style>
