--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -150,7 +150,7 @@
                                 <text>Drills: <%= hpTraining['drills'] %></text>
                             </div>
                         <% } else { %> 
-                            <p style="margin-left: 10px;">There is no High Performance training within the next week.</p>
+                            <p style="margin-left: 10px;margin-bottom: 20px;">There is no High Performance training within the next week.</p>
                         <% } %> 
                     </div>
     
@@ -164,7 +164,7 @@
                                 <text>Drills: <%= dvTraining['drills'] %></text>
                             </div>
                         <% } else { %> 
-                            <p style="margin-left: 10px;">There is no Development training within the next week.</p>
+                            <p style="margin-left: 10px;margin-bottom: 20px;">There is no Development training within the next week.</p>
                         <% } %> 
                     </div>
     
@@ -178,7 +178,7 @@
                                 <text>Drills: <%= cbTraining['drills'] %></text>
                             </div>
                         <% } else { %> 
-                            <p style="margin-left: 10px;">There is no Club training within the next week.</p>
+                            <p style="margin-left: 10px;margin-bottom: 20px;">There is no Club training within the next week.</p>
                         <% } %> 
                     </div>
                 </div>
