--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -112,6 +112,16 @@
             border-color: antiquewhite;
         }
 
+        .weekday-labels-container {
+            display: flex;
+            flex-direction: row;
+            border: 1px, solid, antiquewhite;
+        }
+
+        .weekday-labels {
+            flex: 1;
+        }
+
     </style>
 </head>
 <body>
@@ -218,13 +228,13 @@
                     </div>
 
                     <div class="weekday-labels-container">
-                        <text>Monday</text>
-                        <text>Tuesday</text>
-                        <text>Wednesday</text>
-                        <text>Thursday</text>
-                        <text>Friday</text>
-                        <text>Saturday</text>
-                        <text>Sunday</text>
+                        <text class="weekday-labels">Monday</text>
+                        <text class="weekday-labels">Tuesday</text>
+                        <text class="weekday-labels">Wednesday</text>
+                        <text class="weekday-labels">Thursday</text>
+                        <text class="weekday-labels">Friday</text>
+                        <text class="weekday-labels">Saturday</text>
+                        <text class="weekday-labels">Sunday</text>
                     </div>
 
                     <div class="cells-container">
