--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -115,7 +115,7 @@
         .weekday-labels-container {
             display: flex;
             flex-direction: row;
-            border: 1px, solid, antiquewhite;
+            border: solid, 1px, antiquewhite;
         }
 
         .weekday-labels {
