--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -115,11 +115,12 @@
         .weekday-labels-container {
             display: flex;
             flex-direction: row;
-            border: solid, 1px, antiquewhite;
+            border: 1px, solid, antiquewhite;
         }
 
         .weekday-labels {
             flex: 1;
+            border: 1px, solid, antiquewhite;
         }
 
     </style>
