--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -115,12 +115,17 @@
         .weekday-labels-container {
             display: flex;
             flex-direction: row;
-            border: 1px, solid, antiquewhite;
         }
 
         .weekday-labels {
             flex: 1;
-            border: 1px, solid, antiquewhite;
+            padding: 5px;
+            border-top: 1px;
+            border-left: 1px;
+            border-right: 1px;
+            border-bottom: 1px;
+            border-style: solid;
+            border-color: antiquewhite;
         }
 
     </style>
