--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -97,13 +97,13 @@
         .calendar-wrapper {
             display: flex;
             flex-direction: column;
-            row-gap: 10px;
         }
 
         .title-section{
             display: flex;
             justify-content:space-evenly;
             flex-direction: row;
+            padding: 10px;
             border-top: 0px;
             border-left: 0px;
             border-right: 0px;
