--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -130,6 +130,7 @@
 
         .cells-container {
             display: flex;
+            flex-basis: 14%;
             flex-direction: row;
         }
 
