--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -129,13 +129,11 @@
         }
 
         .cells-container {
-            display: flex;
-            flex-basis: 14%;
-            flex-direction: row;
+            display: grid; 
+            grid-template-columns: repeat(7, 1fr)
         }
 
         .cells {
-            flex: 1;
             padding: 5px;
             border-top: 1px;
             border-left: 1px;
