--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -260,7 +260,7 @@
 
                     <div class="cells-container">
                         <% for (x=0; x < 42; x++) { %> 
-                            <text id="cell-<%=x+1%>" name="cell-<%=x+1%>">Cell<%=x+1%></text>
+                            <text class="cells" id="cell-<%=x+1%>" name="cell-<%=x+1%>">Cell<%=x+1%></text>
                         <% } %> 
 
                     </div>
