--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -141,6 +141,7 @@
             border-bottom: 1px;
             border-style: solid;
             border-color: antiquewhite;
+            min-height: 35px;
         }
 
     </style>
