forgot () for method

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -267,7 +267,7 @@
 
                         const date = new Date();
                         const firstDayCurrentMonth = getFirstDayOfMonth(date.getFullYear(), date.getMonth());
-                        console.log(firstDayCurrentMonth.getDay);
+                        console.log(firstDayCurrentMonth.getDay());
                     </script>
 
                 </div>
