x not 'x' in textContent

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -310,7 +310,7 @@
                         for (x; x<=42; x++){
                             console.log('looping through y! x='+x);
                             let cell = document.getElementById('cell' + x)
-                            cell.textContent = 'x'
+                            cell.textContent = x
                         }
 
                     </script>
