loop error - fixed

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -308,7 +308,7 @@
 
                         var today = new Date();
                         var lastDayOfMonth = new Date(today.getFullYear(), today.getMonth()+1, 0).getDate();
-                        for (var day = 1; day <=lastDayOfMonth; x++){
+                        for (var day = 1; day <=lastDayOfMonth; day++){
                             let cell = document.getElementById('cell' + x)
                             cell.textContent = day
                             x++;
