added a post loop hide function for calendar

--- a/views/eutrc_app/home.ejs
+++ b/views/eutrc_app/home.ejs
@@ -314,6 +314,12 @@
                             x++;
                         }
 
+                        for (lastDayOfMonth; lastDayOfMonth <= 46; lastDayOfMonth++){
+                            let cell = document.getElementById('cell' + x)
+                            cell.style.visibility = 'hidden'
+                            x++
+                        }
+
                     </script>
 
                 </div>
